[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-rtu"
version = "0.1.0"
description = "Simulated RTU devices (thermostat, power meter) for VOLTTRON platform driver testing"
requires-python = ">=3.11"
license = "BSD-3-Clause"
dependencies = [
    "bacpypes3>=0.0.80",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
sim-rtu = "sim_rtu.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sim_rtu"]
